[package]
name = "rust_ge"
version = "0.1.0"
authors = ["DJin24 <davidchristopherjin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.34.5"


[dependencies.sdl2]
version = "0.34.5"
default-features = false
# features = ["image"]